# unclaw

./: .gitignore  LICENSE  PB_et_piste_amelioration_UNCLAW.txt  README.md  TEST_PUSH_LAPTOP.txt  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: real-ollama-integration.yml
config/: app.yaml  app.yaml.bak  models.yaml  models.yaml.bak  router.yaml  secrets.yaml.bak  telegram.yaml  telegram.yaml.bak
config/prompts/: system.txt
docs/: architecture.md  engineering_guidelines.md  foundation_baseline.md  manual_smoke_test.md  no_deterministic_core_policy.md  product_contract.md  project_brief.md  release_checklist.md  roadmap.md  skills_design.md  skills_v2_design.md  tree_structure.txt  vision.md
skills/: __init__.py
skills/git_repo/: SKILL.md  __init__.py  contracts.py  tool.py
skills/local_text_search/: SKILL.md  __init__.py  contracts.py  (+1 more)
tests/: conftest.py  test_async_boundaries.py  test_block4_cleanup.py  test_capability_budget_policy.py  test_capability_fragments.py  test_catalog_only_model.py  test_chat_memory_store.py  test_cli_channel.py  test_command_handler.py  test_context_budget.py  test_control_surface_permissions.py  test_copy_file.py  test_db_path_migration.py  test_delete_file.py  test_e2e_flows.py  test_entity_integrity.py  test_entity_recentering_fallback.py  test_exact_recall.py  test_fast_grounding_guard_fallback.py  test_git_repo_skill.py  test_legacy_routing_fallback.py  test_literal_entity_guard.py  test_local_action_honesty.py  test_local_text_search_skill.py  test_logs_cli.py  test_long_term_memory_reliability.py  test_main.py  test_memory_architecture.py  test_memory_status.py  test_memory_summary.py  test_mission_execution.py  test_move_file.py  test_new_skills_integration.py  test_notes_tools.py  test_ollama_provider.py  test_onboarding.py  test_p34_capability_and_routing.py  test_p56_search_escalation.py  test_phase0_guardrails.py  test_phase1a_reliability.py  (+41 more)
(+126 files in other folders)
