[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unclaw"
version = "0.1.0"
description = "Local-first AI agent runtime."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Unclaw contributors" },
]
dependencies = [
  "PyYAML>=6.0,<7.0",
  "questionary>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=7.0,<8.0",
  "ruff>=0.11,<0.12",
]

[project.scripts]
unclaw = "unclaw.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
markers = [
  "unit: focused unit and config-validation tests.",
  "integration: tests that exercise multiple layers together.",
  "e2e: end-to-end flow tests through the public entrypoints.",
  "reliability: stability, long-history, or concurrency regression tests.",
  "real_ollama: integration tests that talk to a live local Ollama instance.",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src/unclaw"]

[tool.coverage.report]
show_missing = true
skip_covered = true
